--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@
 
 main:
 
- - title: "Lecture Notes"
+ - title: "Portfolio"
     url: /portfolio/
   
   - title: "Publications"
@@ -18,7 +18,7 @@ main:
 #  - title: "Talks"
 #    url: /talks/    
 
-  - title: "Outreach"
+  - title: "Teaching"
     url: /teaching/    
         
  # - title: "Blog Posts"
