--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,11 +8,14 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Portfolio"
+  - title: "Lecture Notes"
     url: /portfolio/
     
   - title: "Publications"
     url: /publications/
+
+  - title: "Outreach"
+    url: /outreach/
 
  # - title: "Talks"
  #   url: /talks/    
