Attempt to rename portfolio into lecture notes

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@
 
 main:
   - title: "Lecture Notes"
-    url: /portfolio/
+    url: /lecture-notes/
     
   - title: "Publications"
     url: /publications/
