Attempt to revert back to portfolio

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,8 +8,8 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Lecture Notes"
-    url: /lecture-notes/
+  - title: "Portfolio"
+    url: /portfolio/
     
   - title: "Publications"
     url: /publications/
