Added outreach tap with links and everything

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,8 +14,8 @@ main:
   #- title: "Publications"
   #  url: /publications/
 
- # - title: "Outreach"
- #   url: /outreach/
+  - title: "Outreach"
+    url: /outreach/
 
  # - title: "Talks"
  #   url: /talks/    
