--- a/_config.yml
+++ b/_config.yml
@@ -15,14 +15,14 @@ name                     : &name "João F. Melo"
 description              : &description "personal description"
 url                      : https://joaofmelo.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "joaofmelo/joaofmelo.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "photo_scholars_report_sword.jpg"
   name             : ""
   pronouns         : # example: "she/her"  
   bio              : ""
