First attempt at including a paper

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ main:
   - title: "Lecture Notes"
     url: /lecture-notes/
     
-  #- title: "Publications"
-  #  url: /publications/
+  - title: "Publications"
+    url: /publications/
 
   - title: "Outreach"
     url: /outreach/
