Test of em-dash and minor changes

--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ repository               : "joaofmelo/joaofmelo.github.io"
 author:
   # Biographic information
   avatar           : "photo_scholars_report_sword.jpg"
-  name             : "João F. Melo"
+  name             : "Contacts"
   pronouns         : # example: "she/her"  
   bio              : ""
-  location         : "Portugal"
+  location         : "Sintra, Portugal"
   employer         : #
   uri              : # URL
   email            : "joaofrme@gmail.com" 
